--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,20 @@
 <mat-toolbar color="primary">
   Login with Firebase
-  <button mat-button routerLink="login">
-    <mat-icon>login</mat-icon>
-    Login
-  </button>
+
+  <ng-container *ngIf="authService.currentUser$ | async as user; else loginBtn">
+    <button mat-button (click)="logout()">
+      <mat-icon>logout</mat-icon>
+      Logout
+    </button>
+  </ng-container>
+
+  <ng-template #loginBtn>
+    <button mat-button routerLink="login">
+      <mat-icon>login</mat-icon>
+      Login
+    </button>
+  </ng-template>
+
 </mat-toolbar>
 
 <div class="content">
