--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="form-container mat-elevation-z5">
     <h1>Login</h1>
-    <form [formGroup]="loginForm">
+    <form [formGroup]="loginForm" (ngSubmit)="submit()">
         <mat-form-field>
             <input matInput placeholder="Email address" formControlName="email" />
             <mat-error *ngIf="email?.errors?.['required']">
