sign up completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
   Login with Firebase
 
   <ng-container *ngIf="authService.currentUser$ | async as user; else loginBtn">
-    <button mat-button (click)="logout()">
-      <mat-icon>logout</mat-icon>
-      Logout
+    <button mat-button [matMenuTriggerFor]="userMenu">
+      <mat-icon>account_circle</mat-icon>
+      {{ user.displayName }}
     </button>
   </ng-container>
 
@@ -20,3 +20,7 @@
 <div class="content">
   <router-outlet></router-outlet>
 </div>
+
+<mat-menu #userMenu="matMenu">
+  <button mat-menu-item (click)="logout()">Logout</button>
+</mat-menu>
