--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
             </button>
         </div>
         <div class="text-center margin-top">
-            <span >New to our platform? <a class="sign-up-link" routerLink="sign-up">Sign Up!</a></span>
+            <span >New to our platform? <a class="sign-up-link" routerLink="/sign-up">Sign Up!</a></span>
         </div>
     </form>
 </div>
