--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -1,5 +1,15 @@
-.profile-img {
+.profile-img > img {
     border-radius: 100%;
     object-fit: cover;
     object-position: center;
+}
+
+.profile-img {
+    position: relative;
+}
+
+.profile-img > button {
+    position: absolute;
+    bottom: 10px;
+    right: 25%;
 }
