--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -13,3 +13,12 @@
     bottom: 10px;
     right: 25%;
 }
+
+.form-container {
+    max-width: 400px;
+}
+
+.row {
+    display: flex;
+    gap: 16px;
+}
