--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="row">
             <mat-form-field>
-                <input type="number" matInput placeholder="Display Name" formControlName="displayName" />
+                <input type="text" matInput placeholder="Display Name" formControlName="displayName" />
             </mat-form-field>
             <mat-form-field>
                 <input type="number" matInput placeholder="Phone" formControlName="phone" />
