--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,5 @@
-<h1 *ngIf="user$ | async as user">Welcome to our app, {{ user.displayName }}!</h1>
+<div class="container">
+    <div class="chat-list"></div>
+    <div class="messages"></div>
+
+</div>
