--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -6,12 +6,14 @@
 
 .profile-img {
     position: relative;
+    width: 120px;
+    margin: auto;
 }
 
 .profile-img > button {
     position: absolute;
     bottom: 10px;
-    right: 25%;
+    right: 0;
 }
 
 .form-container {
