chat service integrated

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -9,3 +9,13 @@
     background: #c5cae9;
     border-radius: 16px;
 }
+
+.messages {
+    width: 60%;
+    margin: 16px;
+    border-radius: 16px;
+}
+
+.search-input {
+    margin-left: 24px;
+}
