--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,17 @@
 <div class="container">
-    <div class="chat-list"></div>
-    <div class="messages"></div>
+    <div class="chat-list mat-elevation-z5">
+        <div class="search-input">
+            <mat-form-field>
+                <input matInput placeholder="Search for User..." [formControl]="searchControl"
+                    [matAutocomplete]="users" />
+            </mat-form-field>
+            <mat-autocomplete #users="matAutocomplete">
+                <mat-option *ngFor="let user of users$ | async" (click)="createChat(user)">
+                    {{ user?.displayName     }}
+                </mat-option>
+            </mat-autocomplete>
+        </div>
+    </div>
+    <div class="messages mat-elevation-z5"></div>
 
 </div>
